# psx-engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_and_run.bat
.antigravity/: instructions.md
psx-editor/: CMakeLists.txt
psx-editor/shaders/: psxArtifact.frag  psxArtifact.vert
psx-editor/src/: main.cpp
psx-editor/src/renderer/: PsxArtifactRenderer.cpp  PsxArtifactRenderer.h
psx-editor/src/ui/: EditorLayout.cpp  EditorLayout.h
psx-mcp-server/: CMakeLists.txt
psx-mcp-server/include/: McpServer.h  ToolSchema.h
psx-mcp-server/src/: McpServer.cpp
psx-mcp-server/src/tools/: CoreTools.cpp
psx-mcp-server/tests/: CMakeLists.txt  test_dispatch.cpp
psx-runtime/: CMakeLists.txt
psx-runtime/cmake/: mipsel-toolchain.cmake
psx-runtime/core/assets/: CMakeLists.txt  cdrom.c  cdrom.h  tim.c  tim.h  tmd.c  tmd.h
psx-runtime/core/audio/: CMakeLists.txt  spu.c  spu.h
psx-runtime/core/gte/: CMakeLists.txt  gte.h  gte_ops.h  gte_project.h  gte_regs.c
psx-runtime/core/input/: CMakeLists.txt  joypad.c  joypad.h
psx-runtime/core/math/: CMakeLists.txt  fixed.h  mat3.h  trig.c  trig.h  vec3.h
psx-runtime/core/memory/: CMakeLists.txt  heap.c  heap.h  mem_map.h  scratch.c  scratch.h
psx-runtime/core/renderer/: CMakeLists.txt  display.c  display.h  gpu_types.h  ot.h  prim.h
psx-runtime/core/scene/: CMakeLists.txt  camera.c  camera.h  entity.c  entity.h  scene.c  scene.h  transform.c  transform.h
psx-runtime/tests/: CMakeLists.txt  test_assets.cpp  test_audio.cpp  test_fixed.cpp  test_gte.cpp  test_input.cpp  test_memory.cpp  test_renderer.cpp  test_scene.cpp
